...
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorAccentDarkest"
            android:textSize="9sp"
            android:transformPivotX="0px"
            android:transformPivotY="0px"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/actionPanel"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp"
            tools:text="@string/copyright"
            tools:visibility="visible" />

        <mobi.maptrek.view.GaugePanel
...
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/locationButton"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/image_button_padding"
                android:scaleType="fitCenter"
...
                android:scaleType="fitCenter"
                android:src="@drawable/ic_gesture"
                app:tint="?attr/actionIconColor"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/placesButton"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/image_button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_place"
                app:tint="?attr/actionIconColor"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/mapsButton"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/image_button_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_layers"
                app:tint="?attr/actionIconColor"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/image_button_padding"
                android:scaleType="fitCenter"
...
