<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Trekarta</string>
    <string name="title_select_format">Select format</string>
    <string name="title_export_track">Track export</string>
    <string name="title_map_import">Map import</string>
    <string name="title_map_removal">Removing map</string>
    <string name="title_input_name">Name</string>
    <string name="titleCoordinatesInput">Enter coordinates</string>
...
    <string name="whatsNewTitle">What\'s New</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="name">Name</string>
    <string name="degrees">Degrees</string>
    <string name="coordinate_utmups">UTM/UPS</string>
    <string name="coordinate_mgrs">MGRS</string>
    <string name="declination">Declination</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
...
    <string name="actionUndo">Undo</string>
    <string name="actionDismiss">Dismiss</string>
    <string name="actionDelete">Delete</string>
    <string name="action3dBuildings">3D buildings</string>
    <string name="actionGrid" tools:ignore="Typos">Tile grid</string>
    <string name="actionStopNavigation">Stop navigation</string>
    <string name="actionAbout">About</string>
    <string name="actionGotIt">Got it</string>
    <string name="actionEdit">Edit</string>
    <string name="actionShare">Share</string>
    <string name="actionView">View</string>
    <string name="actionContinue">Continue</string>
    <string name="actionNightMode">Night mode</string>
...
    <string name="legend_toilets">Toilets</string>
    <string name="legend_information_office">Information office</string>
    <string name="legend_guidepost">Guidepost</string>
    <string name="legend_map">Map</string>
    <string name="legend_information">Information</string>
    <string name="legend_land">Land</string>
    <string name="legend_administrative">Administrative</string>
    <string name="legend_roads">Roads</string>
    <string name="legend_railways">Railways</string>
    <string name="legend_water">Water</string>
    <string name="legend_urban">Urban</string>
    <string name="legend_downhill_skiing">Downhill skiing</string>
    <string name="legend_nordic_skiing">Nordic skiing</string>
...
