...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/table_padding"
                android:src="@mipmap/application_icon" />

            <ImageView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/splashIcon"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_splash_branding" />
...
                android:layout_marginBottom="6sp"
                android:layout_toEndOf="@id/splashIcon"
                android:text="@string/version"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/version"
                android:layout_marginBottom="6sp"
                android:layout_toEndOf="@id/splashIcon"
                android:textAlignment="center" />
...
