<?xml version="1.0" encoding="utf-8"?>
<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/list"
    style="@style/Scrollbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/panelSolidBackground"
    android:divider="@null"
    android:dividerHeight="0dp" />